#1500: Converted GetTransactionGroup UC to extend BaseSingleEntityCommand